// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:InputTag InputTag input with batch tag 1`] = `
<div>
  <form
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
    novalidate=""
  >
    <input
      style="display: none;"
      type="submit"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
      data-amis-name="tag"
      data-role="form-item"
    >
      <label
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
      >
        <span>
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              标签
            </span>
          </span>
        </span>
      </label>
      <div
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="downshift-3-menu"
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TagControl"
        role="combobox"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox __PRISMUI_COMPONENT_CLASS_PREFIX__TagControl-input is-focused is-group"
          tabindex="-1"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-valueLabel"
                data-index="0"
              >
                Apple
              </span>
              <a
                data-index="0"
              >
                <icon-mock
                  class="icon icon-close"
                  icon="close"
                />
              </a>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-valueLabel"
                data-index="1"
              >
                Orange
              </span>
              <a
                data-index="1"
              >
                <icon-mock
                  class="icon icon-close"
                  icon="close"
                />
              </a>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-valueLabel"
                data-index="2"
              >
                Banana
              </span>
              <a
                data-index="2"
              >
                <icon-mock
                  class="icon icon-close"
                  icon="close"
                />
              </a>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="downshift-3-menu"
              autocomplete="off"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-input"
              id="downshift-3-input"
              name="tag"
              placeholder=""
              theme="cxd"
              type="text"
              value=""
            />
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-actions"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Renderer:InputTag InputTag input with batch tag and separator "|" 1`] = `
<div>
  <form
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
    novalidate=""
  >
    <input
      style="display: none;"
      type="submit"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
      data-amis-name="tag"
      data-role="form-item"
    >
      <label
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
      >
        <span>
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              标签
            </span>
          </span>
        </span>
      </label>
      <div
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="downshift-4-menu"
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TagControl"
        role="combobox"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox __PRISMUI_COMPONENT_CLASS_PREFIX__TagControl-input is-focused is-group"
          tabindex="-1"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-valueLabel"
                data-index="0"
              >
                Apple
              </span>
              <a
                data-index="0"
              >
                <icon-mock
                  class="icon icon-close"
                  icon="close"
                />
              </a>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-valueLabel"
                data-index="1"
              >
                Orange
              </span>
              <a
                data-index="1"
              >
                <icon-mock
                  class="icon icon-close"
                  icon="close"
                />
              </a>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-valueLabel"
                data-index="2"
              >
                Banana
              </span>
              <a
                data-index="2"
              >
                <icon-mock
                  class="icon icon-close"
                  icon="close"
                />
              </a>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="downshift-4-menu"
              autocomplete="off"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-input"
              id="downshift-4-input"
              name="tag"
              placeholder=""
              theme="cxd"
              type="text"
              value=""
            />
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-actions"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Renderer:InputTag InputTag input with max quantity 2 1`] = `
<div>
  <form
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
    novalidate=""
  >
    <input
      style="display: none;"
      type="submit"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
      data-amis-name="tag"
      data-role="form-item"
    >
      <label
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
      >
        <span>
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              标签
            </span>
          </span>
        </span>
      </label>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TagControl"
        role="combobox"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox __PRISMUI_COMPONENT_CLASS_PREFIX__TagControl-input is-focused is-group"
          tabindex="-1"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-valueLabel"
                data-index="0"
              >
                Apple
              </span>
              <a
                data-index="0"
              >
                <icon-mock
                  class="icon icon-close"
                  icon="close"
                />
              </a>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-valueLabel"
                data-index="1"
              >
                Orange
              </span>
              <a
                data-index="1"
              >
                <icon-mock
                  class="icon icon-close"
                  icon="close"
                />
              </a>
            </div>
            <input
              aria-autocomplete="list"
              autocomplete="off"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-input"
              id="downshift-5-input"
              name="tag"
              placeholder=""
              theme="cxd"
              type="text"
              value="Banana"
            />
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-actions"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Renderer:InputTag InputTag input with maxTagLength 5 1`] = `
<div>
  <form
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
    novalidate=""
  >
    <input
      style="display: none;"
      type="submit"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
      data-amis-name="tag"
      data-role="form-item"
    >
      <label
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
      >
        <span>
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              标签
            </span>
          </span>
        </span>
      </label>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TagControl"
        role="combobox"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox __PRISMUI_COMPONENT_CLASS_PREFIX__TagControl-input is-focused is-group"
          tabindex="-1"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-valueLabel"
                data-index="0"
              >
                Apple
              </span>
              <a
                data-index="0"
              >
                <icon-mock
                  class="icon icon-close"
                  icon="close"
                />
              </a>
            </div>
            <input
              aria-autocomplete="list"
              autocomplete="off"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-input"
              id="downshift-6-input"
              name="tag"
              placeholder=""
              theme="cxd"
              type="text"
              value="Banana"
            />
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-actions"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Renderer:InputTag InputTag input with single tag 1`] = `
<div>
  <form
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
    novalidate=""
  >
    <input
      style="display: none;"
      type="submit"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
      data-amis-name="tag"
      data-role="form-item"
    >
      <label
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
      >
        <span>
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              标签
            </span>
          </span>
        </span>
      </label>
      <div
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="downshift-2-menu"
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TagControl"
        role="combobox"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox __PRISMUI_COMPONENT_CLASS_PREFIX__TagControl-input is-focused is-group"
          tabindex="-1"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-valueLabel"
                data-index="0"
              >
                Honey-dew melon
              </span>
              <a
                data-index="0"
              >
                <icon-mock
                  class="icon icon-close"
                  icon="close"
                />
              </a>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="downshift-2-menu"
              autocomplete="off"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-input"
              id="downshift-2-input"
              name="tag"
              placeholder=""
              theme="cxd"
              type="text"
              value=""
            />
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-actions"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Renderer:InputTag InputTag with options 1`] = `
<div>
  <form
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
    novalidate=""
  >
    <input
      style="display: none;"
      type="submit"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
      data-amis-name="tag"
      data-role="form-item"
    >
      <label
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
      >
        <span>
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              标签
            </span>
          </span>
        </span>
      </label>
      <div
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="downshift-1-menu"
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TagControl has-popover"
        role="combobox"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox __PRISMUI_COMPONENT_CLASS_PREFIX__TagControl-input is-focused is-group"
          tabindex="-1"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-1-menu"
              autocomplete="off"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-input"
              id="downshift-1-input"
              name="tag"
              placeholder="请输入/选择标签"
              theme="cxd"
              type="text"
              value=""
            />
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-actions"
          />
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__PopOver __PRISMUI_COMPONENT_CLASS_PREFIX__TagControl-popover"
          data-prismui-theme="cxd"
          role="popover"
          style="display: block; left: 0px; top: 0px; visibility: hidden;"
          theme="cxd"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PopOver-overlay"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListMenu"
          >
            <div
              aria-selected="false"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListMenu-item"
              id="downshift-1-item-0"
              role="option"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListMenu-itemLabel"
              >
                Apple
              </div>
            </div>
            <div
              aria-selected="false"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListMenu-item"
              id="downshift-1-item-1"
              role="option"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListMenu-itemLabel"
              >
                Orange
              </div>
            </div>
            <div
              aria-selected="false"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListMenu-item"
              id="downshift-1-item-2"
              role="option"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListMenu-itemLabel"
              >
                Banana
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Renderer:InputTag InputTag with placeholder 1`] = `
<div>
  <form
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
    novalidate=""
  >
    <input
      style="display: none;"
      type="submit"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
      data-amis-name="tag"
      data-role="form-item"
    >
      <label
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
      >
        <span>
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              标签
            </span>
          </span>
        </span>
      </label>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TagControl"
        role="combobox"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox __PRISMUI_COMPONENT_CLASS_PREFIX__TagControl-input is-group"
          tabindex="-1"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
          >
            <input
              aria-autocomplete="list"
              autocomplete="off"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-input"
              id="downshift-0-input"
              name="tag"
              placeholder="please input the tag"
              theme="cxd"
              type="text"
              value=""
            />
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-actions"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;
